Added sort button

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,18 @@
         </section>
 
         <section id="products">
-            <h2>Our Products</h2>
+            <span id="our-products">
+                <h2>Our Products</h2>
+                <span>
+                    <label for="#sort-by">Sort By: </label>
+                    <select id="sort-by">
+                        <option>None</option>
+                        <option value="type">Type</option>
+                        <option value="occasion">Occasion</option>
+                        <option value="color">Color</option>
+                    </select> 
+                </span>
+            </span>
             <div class="products">
                 <div class="product">
                     <img src="https://via.placeholder.com/150?text=Custom+Bouquet" alt="Custom Bouquet">
